--- a/Relation_Women_EdLevel_Ctes.ipynb
+++ b/Relation_Women_EdLevel_Ctes.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![cuadro6_7](https://github.com/FernanZL/edu_wo_rel_ctes/raw/master/cuadro6_7.png)"
+    "![cuadro6_7](./cuadro6_7.png)"
    ]
   },
   {
