--- a/Relation_Women_EdLevel_Ctes.ipynb
+++ b/Relation_Women_EdLevel_Ctes.ipynb
@@ -18,15 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente Excel puede ser descargo de la página del INDEC comentada a continuación, y la imagen que prosigue es una captura de los datos que analizaremos.  \n",
+    "El siguiente Excel puede ser descargo de la página del INDEC comentada a continuación.  \n",
     "https://www.indec.gob.ar/ftp/cuadros/poblacion/c2022_corrientes_fecundidad_c6_7.xlsx "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![cuadro6_7](./cuadro6_7.png)"
    ]
   },
   {
